force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/WDA_Headcount_Type_Mapping__mdt/WDA_Headcount_Type_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>PR1064302-652-Create Workday Decoders</description>
    <label>WDA Headcount Type Mapping</label>
    <pluralLabel>WDA Headcount Type Mappings</pluralLabel>
</CustomObject>