force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/WDA_Headcount_Type_Mapping__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <length>30</length>
    <type>Text</type>
</CustomField>