force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/WDA_Headcount_Type_Mapping__mdt/fields/Classification_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Classification_Grouping__c</fullName>
    <label>Classification Grouping</label>
    <length>100</length>
    <type>Text</type>
</CustomField>