force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/WDA_Headcount_Type_Mapping__mdt/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>