force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/WDA_Headcount_Type_Mapping__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>