force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/WDA_Headcount_Type_Mapping__mdt/fields/Workday_Adaptive_Headcount_Type__c.field-meta.xml
<CustomField>
    <fullName>Workday_Adaptive_Headcount_Type__c</fullName>
    <label>Workday Adaptive Headcount Type</label>
    <length>150</length>
    <type>Text</type>
</CustomField>